# chess-engine-parallelization

./: .gitignore  CMakeLists.txt
engine/: bitboards.cpp  bitboards.hpp  board.cpp  board.hpp  evaluation.cpp  evaluation.hpp  fen.cpp  fen.hpp  magics.cpp  magics.hpp  movegen.cpp  movegen.hpp  moveorderer.cpp  moveorderer.hpp  san.cpp  san.hpp  search.cpp  search.hpp  tt.cpp  tt.hpp  typedefs.hpp  uci.cpp  utils.cpp  utils.hpp  zobrist.cpp  zobrist.hpp
